cambio de tonalidad de contactos

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -59,13 +59,13 @@
             <div class="contact-info">
                 <h4>MÁS INFORMACIÓN</h4>
                 <ul>
-                    <li><i class="fas fa-map-marker-alt"></i> Av Halcones 211 | Surco </li>
+                    <li><i class="fas fa-map-marker-alt"></i> La Morera 500, Surquillo 15038</li>
                     <li><i class="fas fa-phone"></i> 2479537</li>
                     <li><i class="fas fa-envelope-open-text"></i>huellitassalon.com</li>
                 </ul>
                 <p>Si tienes alguna duda o quieres mejor asesoramiento y resolver tus dudas, contactanos y nos pondremos
-                    en contacto contigo </p>
-                <p>huellitas salon.com</p>
+                    en contacto contigo. </p>
+                <p>Huellitas-Salon.com</p>
             </div>
         </div>
 
